# 2026-summer-github-actions-reference

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  skills-lock.json
.claude/skills/: ruff-recursive-fix
.github/: pull_request_template.md
.github/workflows/: pipeline.yml
docs/: course-design.md  homework.md  prerequisite.md  teacher-prep.md
specs/001-filter-todos/: spec.md
src/todo_api/: __init__.py  cli.py  main.py  models.py  repository.py
src/todo_api/routers/: __init__.py  health.py  todos.py
tests/: conftest.py  test_cli.py  test_health.py  test_todos.py
