[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-api"
version = "0.1.0"
description = "A small FastAPI Todo API for learning CI/CD with GitHub Actions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.51.0",
]

[project.scripts]
todo-api = "todo_api.cli:main"

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/todo_api"]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-ra",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["todo_api"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "FAST", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
